--- a/Net_GIS_Falcon/Net_Gis_Falcon/Views/Zonas/Create.cshtml
+++ b/Net_GIS_Falcon/Net_Gis_Falcon/Views/Zonas/Create.cshtml
@@ -3,6 +3,8 @@
 @{
     ViewData["Title"] = "Create";
 }
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/openlayers/openlayers.github.io@master/en/v6.5.0/css/ol.css" type="text/css">
+<script src="https://unpkg.com/elm-pep"></script>
 <script src="https://cdn.jsdelivr.net/gh/openlayers/openlayers.github.io@master/en/v6.5.0/build/ol.js"></script>
 
 <h1>Crear zona</h1>
@@ -31,10 +33,10 @@
                 <span asp-validation-for="NombreZona" class="text-danger"></span>
             </div>
             <!--<div class="form-group">
-        <label asp-for="GeometriaZona" class="control-label">Nombre de la zona</label>
-        <input asp-for="GeometriaZona" class="form-control" />
-        <span asp-validation-for="GeometriaZona" class="text-danger"></span>
-    </div>-->
+                <label asp-for="GeometriaZona" class="control-label">Nombre de la zona</label>
+                <input asp-for="GeometriaZona" class="form-control" />
+                <span asp-validation-for="GeometriaZona" class="text-danger"></span>
+            </div>-->
             <div class="form-group">
                 <label asp-for="DescripcionZona" class="control-label">Descripción</label>
                 <textarea asp-for="DescripcionZona" class="form-control" placeholder="(máx 100 caracteres)" style="resize: none">
@@ -43,7 +45,7 @@
             </div>
             <div class="form-group">
                 <label asp-for="GeometriaZona" class="control-label"></label>
-                <input id="info" class="form-control" />
+                <input asp-for="GeometriaZona" id="info" class="form-control" />
                 <span asp-validation-for="GeometriaZona" class="text-danger"></span>
             </div>
 
