--- a/Net_GIS_Falcon/Net_Gis_Falcon/Areas/Identity/Pages/Account/Register.cshtml
+++ b/Net_GIS_Falcon/Net_Gis_Falcon/Areas/Identity/Pages/Account/Register.cshtml
@@ -3,91 +3,152 @@
 @{
     ViewData["Title"] = "Register";
 }
+<style>
+    body {
+        background: rgba(224, 224, 224);
+    }
+    .myform {
+        position: relative;
+        display: -ms-flexbox;
+        display: flex;
+        padding: 1rem;
+        -ms-flex-direction: column;
+        flex-direction: column;
+        width: 100%;
+        pointer-events: auto;
+        background-color: #fff;
+        background-clip: padding-box;
+        border: 1px solid rgba(0,0,0,.2);
+        border-radius: 1.1rem;
+        outline: 0;
+       ;
+    }
 
-<h1>Registro</h1>
-<h4>Crear una nueva cuenta.</h4>
-<hr />
-<h6 class="alert-danger">@ViewData["Error"]</h6>
-<div asp-validation-summary="All" class="text-danger"></div>
+    .tx-tfm {
+        text-transform: uppercase;
+    }
+
+    .mybtn {
+        border-radius: 50px;
+    }
 
 
-<form asp-route-returnUrl="@Model.ReturnUrl" method="post">
-    <div class="row row-cols-3">
-        <div class="col-md-4">
-            <div class="form-group">
-                <label asp-for="Input.Email"></label>
-                <input asp-for="Input.Email" class="form-control" />
-                <span asp-validation-for="Input.Email" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Input.Password">Contraseña</label>
-                <input asp-for="Input.Password" class="form-control" />
-                <span asp-validation-for="Input.Password" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Input.ConfirmPassword">Confirmar contraseña</label>
-                <input asp-for="Input.ConfirmPassword" class="form-control" />
-                <span asp-validation-for="Input.ConfirmPassword" class="text-danger"></span>
+    .span-or {
+        display: block;
+        position: absolute;
+        left: 50%;
+        top: -2px;
+        margin-left: -25px;
+        background-color: #fff;
+        width: 50px;
+        text-align: center;
+    }
+
+    .hr-or {
+        height: 1px;
+        margin-top: 0px !important;
+        margin-bottom: 0px !important;
+    }
+
+    form .error {
+        color: #ff0000;
+    }
+
+    }
+</style>
+<div class="container">
+    <div class="row">
+        <div class="col-md-12 mx-auto">
+            <div id="first">
+                <div class="myform form ">
+                    <h1>Registro</h1>
+                    <h4 >Crear una nueva cuenta.</h4>
+                    <hr />
+                    <h6 class="alert-danger">@ViewData["Error"]</h6>
+                    <div asp-validation-summary="All" class="text-danger"></div>
+
+
+                    <form asp-route-returnUrl="@Model.ReturnUrl" method="post">
+                        <div class="row row-cols-3">
+                            <div class="col-md-4">
+                                <div class="form-group">
+                                    <label asp-for="Input.Email"></label>
+                                    <input asp-for="Input.Email" class="form-control" placeholder="Correo" />
+                                    <span asp-validation-for="Input.Email" class="text-danger"></span>
+                                </div>
+                                <div class="form-group">
+                                    <label asp-for="Input.Password">Contraseña</label>
+                                    <input asp-for="Input.Password" class="form-control" placeholder="Contraseña" />
+                                    <span asp-validation-for="Input.Password" class="text-danger"></span>
+                                </div>
+                                <div class="form-group">
+                                    <label asp-for="Input.ConfirmPassword">Confirmar contraseña</label>
+                                    <input asp-for="Input.ConfirmPassword" class="form-control" placeholder="Confirme su contraseña" />
+                                    <span asp-validation-for="Input.ConfirmPassword" class="text-danger"></span>
+                                </div>
+                            </div>
+                            <div class="col-md-4">
+                                <div class="form-group">
+                                    <label asp-for="Input.Name"></label>
+                                    <input asp-for="Input.Name" class="form-control" placeholder="Nombre" />
+                                    <span asp-validation-for="Input.Name" class="text-danger"></span>
+
+                                </div>
+                                <div class="form-group">
+                                    <label asp-for="Input.Surname"></label>
+                                    <input asp-for="Input.Surname" class="form-control" placeholder="Apellidos" />
+                                    <span asp-validation-for="Input.Surname" class="text-danger"></span>
+                                </div>
+                                <div class="form-group">
+                                    <label asp-for="Input.PhoneNumber">Numero de telefono</label>
+                                    <input asp-for="Input.PhoneNumber" class="form-control" placeholder="Numero de telefono" />
+                                    <span asp-validation-for="Input.PhoneNumber" class="text-danger"></span>
+                                </div>
+                                <div class="form-group">
+
+                                    <label asp-for="Input.Gender">Genero</label>
+                                    <select asp-for="Input.Gender" class="form-control">
+                                        <option value="M">Masculino</option>
+                                        <option value="F">Femenino</option>
+                                        <option value="NB">No binario</option>
+                                        <option value="O">Otro</option>
+                                    </select>
+                                    <span asp-validation-for="Input.Gender" class="text-danger"></span>
+                                </div>
+
+                            </div>
+                            <div class="col-md-4">
+                                <div class="form-group">
+                                    <label asp-for="Input.Language"></label>
+                                    <input asp-for="Input.Language" class="form-control" placeholder="Idioma" />
+                                    <span asp-validation-for="Input.Language" class="text-danger"></span>
+                                </div>
+                                <div class="form-group">
+                                    <label asp-for="Input.Direction"></label>
+                                    <input asp-for="Input.Direction" class="form-control" placeholder="Direccion" />
+                                    <span asp-validation-for="Input.Direction" class="text-danger"></span>
+                                </div>
+                                <div class="form-group">
+                                    <label asp-for="Input.Municipality"></label>
+                                    <input asp-for="Input.Municipality" class="form-control" placeholder="Municipio" />
+                                    <span asp-validation-for="Input.Municipality" class="text-danger"></span>
+                                </div>
+                                <div class="form-group">
+                                    <label asp-for="Input.BirthDay">Fecha de nacimiento</label>
+                                    <input asp-for="Input.BirthDay" class="form-control" />
+                                    <span asp-validation-for="Input.BirthDay" class="text-danger"></span>
+                                </div>
+                                <button type="submit" class="btn btn-primary">Register</button>
+                            </div>
+                        </div>
+                    </form>
+                    </div>
+                </div>
             </div>
         </div>
-        <div class="col-md-4">
-            <div class="form-group">
-                <label asp-for="Input.Name"></label>
-                <input asp-for="Input.Name" class="form-control" />
-                <span asp-validation-for="Input.Name" class="text-danger"></span>
-                
-            </div>
-            <div class="form-group">
-                <label asp-for="Input.Surname"></label>
-                <input asp-for="Input.Surname" class="form-control" />
-                <span asp-validation-for="Input.Surname" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Input.PhoneNumber">Numero de telefono</label>
-                <input asp-for="Input.PhoneNumber" class="form-control" />
-                <span asp-validation-for="Input.PhoneNumber" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-
-                <label asp-for="Input.Gender">Genero</label>
-                <select asp-for="Input.Gender" class="form-control">
-                    <option value="M">Masculino</option>
-                    <option value="F">Femenino</option>
-                    <option value="NB">No binario</option>
-                    <option value="O">Otro</option>
-                </select>
-                <span asp-validation-for="Input.Gender" class="text-danger"></span>
-            </div>
-
-        </div>
-        <div class="col-md-4">
-            <div class="form-group">
-                <label asp-for="Input.Language"></label>
-                <input asp-for="Input.Language" class="form-control" />
-                <span asp-validation-for="Input.Language" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Input.Direction"></label>
-                <input asp-for="Input.Direction" class="form-control" />
-                <span asp-validation-for="Input.Direction" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Input.Municipality"></label>
-                <input asp-for="Input.Municipality" class="form-control" />
-                <span asp-validation-for="Input.Municipality" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Input.BirthDay">Fecha de nacimiento</label>
-                <input asp-for="Input.BirthDay" class="form-control" />
-                <span asp-validation-for="Input.BirthDay" class="text-danger"></span>
-            </div>
-            <button type="submit" class="btn btn-primary">Register</button>
-            </div>
-        </div>
-</form>
+    </div>
 
 
-
-@section Scripts {
-    <partial name="_ValidationScriptsPartial" />
-}
+                @section Scripts {
+                    <partial name="_ValidationScriptsPartial" />
+                }
